--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ uvicorn = "^0.23.2"
 langserve = {extras = ["server"], version = ">=0.0.30"}
 pydantic = "<2"
 coding-problem-generator = {path = "packages/coding_problem_generator", develop = true}
+exception-example = {path = "packages/exception_example", develop = true}
 
 
 [tool.poetry.group.dev.dependencies]
